<!--
  ~ Created by Benard Gachanja on 10/13/20 5:26 PM
  ~ Copyright (c) 2020 . Spiking Acacia. All rights reserved.
  ~ Last modified 10/11/20 1:32 AM
  -->

<resources>
    <string name="app_name">Order</string>
    <string name="app_version">Version 1.5.3</string>
    <string name="copyright">\u00A9 2020 Spiking Acacia</string>
    <!-- my tsrings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- my strings-->
    <string name="forgotyourpassword">Forgot your password?</string>
    <string name="title_activity_settings">Settings</string>

    <!--subscriptions-->
    <!--general -->
    <string name="login_welcome_seller">Is the customer \n Always right?</string>
    <string name="register">Register</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_logout">Logout</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_location">Location</string>
    <string name="pref_header_feedback">Feedback</string>
    <string name="pref_header_help">Help</string>
    <string name="pref_header_account">Account</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">This app requires location permission. Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

    <!-- customers help page-->
    <string name="c_1">Profile</string>
    <string name="c_1_a">\u2460 Define your names.</string>
    <string name="c_1_b"> \u279e Settings \u279e General \u279e Full Names</string>
    <string name="c_2_a">\u2461 Upload your photo picture</string>
    <string name="c_2_b">\u279e Settings \u279e General \u279e </string>

    <string name="c_end">Walk into your favorite restaurant and order your favorite food.</string>
    <string name="c_end_1"> \u279e Restaurant \u279e Location \u279e  (Restaurant)</string>

    <!-- barcode-->
    <string name="ok">OK</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>

    <string name="no_camera_permission">You can not proceed because the app  does not have the camera permission.</string>

    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="title_activity_main">Barcode Reader Sample</string>

    <string name="barcode_header">Click "Read Barcode" to read a barcode</string>

    <string name="read_barcode">Read Barcode</string>

    <string name="auto_focus">Auto Focus</string>

    <string name="use_flash">Use Flash</string>

    <string name="barcode_success">Barcode read successfully</string>

    <string name="barcode_failure">No barcode captured</string>

    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="restaurants">Restaurants</string>
    <string name="spiky_hotel">Spiky hotel</string>
    <string name="find_restaurant">Find Restaurant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
