<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spikingacacia.spikyletabuyer.BHelpF">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/secondary_background"
                   android:gravity="center"
                   android:text="@string/c_1"
                   android:textSize="18sp" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/tertiary_background"
                   android:padding="10dp"
                   android:text="@string/c_1_a" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/tertiary_background"
                   android:padding="10dp"
                   android:paddingStart="20dp"
                   android:paddingEnd="20dp"
                   android:text="@string/c_1_b" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/tertiary_background"
                   android:padding="10dp"
                   android:text="@string/c_2_a" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/tertiary_background"
                   android:padding="10dp"
                   android:paddingStart="20dp"
                   android:paddingEnd="20dp"
                   android:text="@string/c_2_b" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/tertiary_background"
                   android:gravity="center"
                   android:padding="10dp"
                   android:text="@string/c_end" />
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/tertiary_background"
                  android:gravity="center"
                  android:padding="10dp"
                  android:text="@string/c_end_1" />
           </LinearLayout>

       </LinearLayout>
   </ScrollView>

</FrameLayout>